deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-app-deployment
  labels:
    app: python-flask-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: python-flask-app
  template:
    metadata:
      labels:
        app: python-flask-app
    spec:
      containers:
      - name: python-flask-app
        image: python:latest
        ports:
        - containerPort: 5001
