services.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-app-service
  labels:
    app: python-flask-app
spec:
  ports:
  - port: 80 
    targetPort: 5001 
  selector:
    app: python-flask-app
  type: ClusterIP
