Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: your-domain.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-flask-app-service
            port:
              number: 80
